--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -6,6 +6,9 @@ jobs:
         steps:
             - name: checkout
               uses: actions/checkout@v4
+              
+            - name: install cypress
+              run: npm install
 
             - name: Cypress run
               uses: cypress-io/github-action@v6
