--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,7 +2,7 @@ name: Cypress-e2e
 on: push
 jobs:
     cypress-run:
-        runs-on: Windows (x86) 10 2004/20H2/21H1/21H2
+        runs-on: windows-latest
         steps:
             - name: checkout
               uses: actions/checkout@v4
