--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -10,3 +10,7 @@ jobs:
             - name: Cypress run
               uses: cypress-io/github-action@v6
 
+              with: 
+                command: npx cypress run
+                browser: chrome
+
